--- a/application.yml
+++ b/application.yml
@@ -1,7 +1,10 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
-spring.datasource.username=root
-spring.datasource.password=tiger
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    password: tiger
+    url: jdbc:mysql://http.localhost:3306/mydb
+    username: root
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
